--- a/index.html
+++ b/index.html
@@ -6,43 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>World wibe web🚀</h1><br>
-The Worldwideweb(w3) is a wide-area<a href="https://www.javatpoint.com/what-is-html">hypermedia</a>
-information retrieval initiative aiming to give universal access to a large universe of documents.<p>
-Everything there is online about W3 is linked directly or indirectly to this document,including an 
-<a href="https://info.cern.ch/hypertext/WWW/Summary.html">executive</a>of the project ,<br>
-<a name="29"href="Administration/Mailing/Overview.html">Mailing list</a>
-,<a href="https://info.cern.ch/hypertext/WWW/Summary.html">executivesummary</a>of the project,
-<a href="https://info.cern.ch/hypertext/WWW/Administration/Mailing/Overview">Mailing lists</a>,
-<a href="https://info.cern.ch/hypertext/WWW/Policy.html">policy</a>,
- November's<a href="https://info.cern.ch/hypertext/WWW/News/9211.html">w3 news</a>,
- <a href="https://info.cern.ch/hypertext/WWW/FAQ/List.html">Frequently Asked Questions</a>.
-<dl>
-    <dt><a href="https://info.cern.ch/hypertext/DataSources/Top.html">What's out there?</a>,
-    <dd> Pointers to the world's online information,<a href="https://info.cern.ch/hypertext/DataSources/bySubject/Overview.html">subjects</a>,
-    <a href="https://info.cern.ch/hypertext/DataSources/WWW/Servers.html">w3 servers</a>,etc.
-   <dt><a href="https://info.cern.ch/hypertext/WWW/Help.html">help</a><dd>on the browser you are using <dt>
-    <a href="https://info.cern.ch/hypertext/WWW/Status.html">Software product</a>
-    <dd>A list of w3 project component and their current state.(e.g<a href="https://info.cern.ch/hypertext/WWW/LineMode/Browser.html">Line Mode</a>,X11 
-    <a href="https://info.cern.ch/hypertext/WWW/Status.html#35">Viola</a>,
-    <a href="https://info.cern.ch/hypertext/WWW/NeXT/WorldWideWeb.html">NeXTStep</a>,
-    <a href="https://info.cern.ch/hypertext/WWW/Daemon/Overview.html">Servers</a>,
-    <a href="https://info.cern.ch/hypertext/WWW/Tools/Overview.html">Tools</a>,
-    <a href="https://info.cern.ch/hypertext/WWW/MailRobot/Overview.html">Mail robot</a>,
-    <a href="https://info.cern.ch/hypertext/WWW/Status.html#57">Library</a>)
-    <dt><a href="https://info.cern.ch/hypertext/WWW/Technical.html">Technical</a>
-    <dd>Details of protocols, formats, program internals etc
-     <dt><a href="https://info.cern.ch/hypertext/WWW/Bibliography.html">Bibliography</a>
-     <dd>Paper documentation on  W3 and references.
-        <dt><a href="https://info.cern.ch/hypertext/WWW/People.html">people</a>  
-            <dd>A list of some people involved in the project.  
-   <dt><a href="https://info.cern.ch/hypertext/WWW/History.html">Histroy</a>
-    <dd>A summary of the history of the project.
-    <dt><a href="https://info.cern.ch/hypertext/WWW/Helping.html">How can I help</a>?    
-        <dd>If you would like to support the web..  
-    <dt><a href="https://info.cern.ch/hypertext/README.html">Grtting code</a>
-        <dd>Grtting the code <a href="https://info.cern.ch/hypertext/WWW/LineMode/Defaults/Distribution.html">anonymous FTP</a>,etc.</a>
-            <h3>Thank you....🙏</h3>
-</dl>
+    <body style="background-color:burlywood ;"></body>
+ <h2>This is my frist project:👉 <a href="./www.html"> www project Click  </a></h2>
+   
+  
 </body>
-</html> 
+</html>
