--- a/form.html
+++ b/form.html
@@ -30,7 +30,7 @@
     }
 
     body{
-        background-color: aqua;
+        background-color:wheat;
     }
     .in{
         justify-content: center;
